transcription adding
